# fin_agent_v0_050625

./: .env.template  .gitignore  CLAUDE.md  Dockerfile  HANDOVER_NOTES.md  README.md  comprehensive_test.py  coverage.xml  dashboard.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test_domain.py  test_market_data.py
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  tests.yml
data/: metrics.db  trades.db
data/universe/: revolut_universe_template.csv
docs/: phase_7_completion_report.md  phase_7_remaining_tasks.md
docs/code_reviews/: gemini_roast.md
docs/refactoring/: claude_rebuttal.md.md  gemini_instructions.md  o3_final_refactor_build_plan.md  o3_final_refactoring_plan.md  o3_initial_plan.md
docs/research/: PRD.md  agent_arrchitecture.md  agent_description.md  o3_build_plan.md  opus_build_plan.md  opus_progress.md
docs/temp/: phase_7_benefits.md
logs/: quota_state.json
src/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  base.py  cache.py  cache_manager.py  finnhub.py  market.py  news.py  news_manager.py  yahoo.py
src/domain/: __init__.py  planner.py  risk.py  scanner.py  scoring.py  universe.py
src/orchestration/: __init__.py  coordinator.py  event_bus.py  events.py  scheduler.py
src/persistence/: __init__.py  journal.py  metrics.py
src/utils/: __init__.py  logger.py  quota.py
tests/integration/: __init__.py  test_basic_integration.py  test_cache_integration.py  test_database_integration.py  test_news_integration.py
tests/performance/: __init__.py  test_benchmarks.py  test_stress.py
tests/security/: __init__.py  test_security.py
tests/system/: __init__.py  test_full_trading_day.py  test_market_hours.py  test_recovery.py
tests/unit/: test_data_layer.py  test_domain_layer.py  test_orchestration.py  test_persistence.py  test_quota_logging.py
